# ros2_ws_wsl2_RasPI

./: .gitignore  COMPARATIVA_CYCLONEDDS.md  README.md  SCRIPTS_README.md  build_workspace.sh  check_connection.sh  clean_workspace.sh  setup_cyclonedds.sh  setup_rmw.sh
config/: cyclonedds.xml  cyclonedds_RasPI.xml  cyclonedds_WSL.xml
src/cross_distro_demo/: CMakeLists.txt  package.xml  setup.py
src/cross_distro_demo/config/: params.yaml
src/cross_distro_demo/cross_distro_demo/: message_relay.py  pc_publisher.py  pi_subscriber.py
src/cross_distro_demo/launch/: pc_launch.py  pi_launch.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: CrossDistroMessage.msg
src/wsl_raspi_comm/: package.xml  setup.cfg  setup.py
src/wsl_raspi_comm/wsl_raspi_comm/: listener.py  ping_node.py  pong_node.py  service_client.py  service_server.py  talker.py
src/wsl_raspi_comm_msgs/: CMakeLists.txt  package.xml
src/wsl_raspi_comm_msgs/msg/: TestData.msg
src/wsl_raspi_comm_msgs/srv/: TestService.srv
