<package format="2">
  <name>cross_distro_demo</name>
  <version>0.0.1</version>
  <description>A demo package for cross-distro communication between a Linux PC and Raspberry Pi using ROS2.</description>
  <maintainer email="sergiorincon50@gmail.com">Sergio</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>custom_interfaces</exec_depend>
  
  <test_depend>pytest</test_depend>
</package>