<package format="3">
  <name>custom_interfaces</name>
  <version>0.0.1</version>
  <description>Custom message types for cross-distro communication.</description>
  <maintainer email="sergiorincon50@gmail.com">Sergio</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>